Fix for async render bug.

--- a/sample/BlazorApp.Android/Resources/layout/activity_main.xml
+++ b/sample/BlazorApp.Android/Resources/layout/activity_main.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
     <fragment
         android:name="BlazorWebView.Android.BlazorWebView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:minWidth="25px"
         android:minHeight="25px"
         android:id="@+id/blazorWebView" />
