--- a/sample/BlazorApp/Shared/NavMenu.razor
+++ b/sample/BlazorApp/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">BlazorDesktopApp</a>
+    <a class="navbar-brand" href="">BlazorWebView App</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
